template/test_agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-agent-<instanceID>
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-agent-<instanceID>
  template:
    metadata:
      labels:
        app: test-agent-<instanceID>
    spec:
      containers:
        - name: test-agent
          image: obfuscation_agent:v3
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
